@@ -42,10 +42,10 @@ libjobs_a_SOURCES = Job.cc Job.h CmdExec.cc CmdExec.h\
  ChmodJob.cc ChmodJob.h TreatFileJob.cc TreatFileJob.h CopyJob.cc CopyJob.h
 
 lftp_LDFLAGS = $(EXPORT_DYNAMIC)
-lftp_LDADD = libjobs.a libtasks.a @READLINE@ @READLINE_SUPPLIB@ $(top_builddir)/lib/liblib.a @INTLLIBS@ @SOCKSLIBS@
-lftp_DEPENDENCIES = libjobs.a libtasks.a @READLINE_DEPEND@ $(top_builddir)/lib/liblib.a
+lftp_LDADD = libjobs.a libtasks.a $(READLINE) $(READLINE_SUPPLIB) $(top_builddir)/lib/liblib.a $(INTLLIBS) $(SOCKSLIBS)
+lftp_DEPENDENCIES = libjobs.a libtasks.a $(READLINE_DEPEND) $(top_builddir)/lib/liblib.a
 #ftpget_LDFLAGS = $(EXPORT_DYNAMIC)
-#ftpget_LDADD = libjobs.a libtasks.a $(top_builddir)/lib/liblib.a @INTLLIBS@ @SOCKSLIBS@
+#ftpget_LDADD = libjobs.a libtasks.a $(top_builddir)/lib/liblib.a $(INTLLIBS) $(SOCKSLIBS)
 
 confpaths.h: Makefile
 	echo "#define SYSCONFDIR \"$(sysconfdir)\""  > $@
